syntax = "proto3";

option go_package = "github.com/rodrigo0345/esr-tp2/config/protobuf";

package video;

////////////////////////////////////////////////////////////////////////////////////////////////////
// Global - Formato a usar para todas as mensagens
////////////////////////////////////////////////////////////////////////////////////////////////////

message Header {
  string sender = 1;
  string target = 2;
  RequestType type = 3;
  int32 length = 4;
  int32 timestamp = 5;

  oneof content {
    ClientCommand client_command = 6;
    ServerVideoChunk server_video_chunk = 7;
    DistanceVectorRouting distance_vector_routing = 8;
  }

  string client_ip = 9;
}

enum RequestType {
  ROUTINGTABLE = 0;
  RETRANSMIT = 1;
}

////////////////////////////////////////////////////////////////////////////////////////////////////
// Client to Server
////////////////////////////////////////////////////////////////////////////////////////////////////

message ClientCommand {
  PlayerCommand command = 1;
  string AdditionalInformation = 2;
}

enum PlayerCommand {
  PLAY = 0;
  STOP = 1;
}

message ServerVideoChunk {
  int32 sequence_number = 1; // Order of this chunk in the video stream
  int64 timestamp = 2;       // Timestamp of the chunk in milliseconds
  VideoFormat format = 3;    // Video format (MP4, MKV, etc.)
  bytes data = 4;            // The raw video chunk data (as byte array)
  bool is_last_chunk = 5;    // Flag to indicate if this is the last chunk
}

enum VideoFormat {
  UNKNOWN = 0;
  MP4 = 1;
  MKV = 2;
  AVI = 3;
  WEBM = 4;
  MJPEG = 5;
}

////////////////////////////////////////////////////////////////////////////////////////////////////
// Presence
////////////////////////////////////////////////////////////////////////////////////////////////////
message Interface {
  string ip = 1;
  int32 port = 2;
}

message NextHop {
  Interface next_node = 1;
  int32 distance = 2;
}

message DistanceVectorRouting {
  map<string, NextHop> entries = 1;
  Interface source = 2;
}
